# tetris

./: .gitignore  CMakeLists.txt  build.ps1  index.html  tetris.data  tetris.js  tetris.wasm  web_build.ps1
.github/workflows/: deploy_web.yml
include/: blocks.hpp  game.hpp  grid.hpp  includes.hpp  position.hpp  printable.hpp
res/: blocks.psd
src/: blocks.cpp  game.cpp  grid.cpp  main.cpp  position.cpp
web/: tetris.js  tetris.wasm
